crates/tsuno-driver/tests/fixtures/snapshots/pass/verifies_passing_known_i32_to_local_fn.rs
//@ verify
fn caller() {
    sink(1_i32);
}

fn sink(x: i32) {
    let _ = x;
}

fn main() {}
