crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_bare_rust_binding_in_assume.rs
fn main() {
    let x = 1_i32;
    //@ assume x == 1i32;
}
